# aidos

./: FAKEDATA.xlsx  aidos_cli.py  pyproject.toml  requirements.txt
aidos/: __init__.py  adapters.py  api.py  chat.py  diff_engine.py  execution.py  ingestion.py  logging_utils.py  netbox_sync.py  observed.py  orchestrator.py  parsers.py  planning.py  project_store.py  rules.py  schemas.py  service.py  state_store.py  truth.py  ui_dashboard.py  validation.py
aidos/examples/: bom_northline_realtime.yaml  bom_team7_h100.yaml  bom_westerby_intl.yaml  context_northline_realtime.json  context_team7_h100.json  context_westerby_intl.json  site_survey_northline_realtime.json  site_survey_team7_h100.json  site_survey_westerby_intl.json
aidos/outputs/: aidos_normalized_inputs.json  aidos_validation_report.json  projects.json
aidos/outputs/latest/: evidence_bundle.json  post_execution_verification_report.json
aidos/outputs/latest/ansible_bundle/: README.md
aidos/outputs/latest/ansible_bundle/playbooks/: syslog_policy.yml
aidos/outputs/pyats_integration_check/latest/: agentic_task_graph.json  missing_data_report.json  netbox_sync_payloads.json  observed_state_snapshot.json  post_execution_verification_report.json  validation_report.json
aidos/outputs/pyats_integration_check/run_20260605_171941/: canonical_sot.json  evidence_bundle.json  runbook.yaml
aidos/outputs/pyats_integration_check/state/: approvals.json
aidos/outputs/run_20260605_132648/: agentic_task_graph.json  ansible_playbook.yml  canonical_sot.json  evidence_bundle.json  missing_data_report.json  netbox_sync_payloads.json  observed_state_snapshot.json  post_execution_verification_report.json  runbook.yaml
aidos/outputs/run_20260605_133411/: canonical_sot.json  evidence_bundle.json  missing_data_report.json  runbook.yaml  validation_report.json
aidos/outputs/run_20260605_133655/: ansible_playbook.yml  canonical_sot.json  evidence_bundle.json  missing_data_report.json  observed_state_snapshot.json  post_execution_verification_report.json  runbook.yaml  validation_report.json
aidos/outputs/run_20260605_134305/: agentic_task_graph.json  canonical_sot.json  evidence_bundle.json  missing_data_report.json  netbox_sync_payloads.json  post_execution_verification_report.json  runbook.yaml  validation_report.json
aidos/outputs/run_20260605_134604/: canonical_sot.json  evidence_bundle.json  missing_data_report.json  post_execution_verification_report.json  runbook.yaml  validation_report.json
aidos/outputs/run_20260605_135238/: canonical_sot.json  missing_data_report.json  runbook.yaml  validation_report.json
aidos/outputs/state/: approvals.json
aidos/outputs/state/chat_sessions/: branding-check.json  ops-triage.json  tmp-check-2.json  tmp-check.json
groundtruth/: __init__.py
groundtruth/agents/: __init__.py  backend_factory.py  darla.py
groundtruth/agents/backends/: __init__.py  base.py  practice_backend.py  provisioned_backend.py
groundtruth/aidos/: __init__.py  diff_engine.py  execution.py  observed.py  parsers.py  rules.py  schemas.py  service.py
groundtruth/config/: darla.json  darla.yaml  settings.py
groundtruth/data/: nvidia_stack_alignment.md  security_controls.md  shi_customer_readiness.md
groundtruth/outputs/: darla_20260603T193707Z.html  darla_20260603T193707Z.json  darla_20260603T193707Z.md  darla_20260603T194704Z.html  darla_20260603T194704Z.json  darla_20260603T194704Z.md  darla_20260603T194710Z.html  darla_20260603T194710Z.json  darla_20260603T194710Z.md  darla_20260603T195032Z.html  darla_20260603T195032Z.json  darla_20260603T195032Z.md  darla_20260603T195049Z.html  darla_20260603T195049Z.json  darla_20260603T195049Z.md  darla_20260603T200014Z.html  darla_20260603T200014Z.json  darla_20260603T200014Z.md  darla_20260603T200749Z.html  darla_20260603T200749Z.json  darla_20260603T200749Z.md  darla_20260603T202744Z.html  darla_20260603T202744Z.json  darla_20260603T202744Z.md  darla_20260603T203004Z.html  darla_20260603T203004Z.json  darla_20260603T203004Z.md  darla_20260603T203148Z.html  darla_20260603T203148Z.json  darla_20260603T203148Z.md  darla_20260603T204317Z.html  darla_20260603T204317Z.json  darla_20260603T204317Z.md  darla_20260603T210305Z.html  darla_20260603T210305Z.json  darla_20260603T210305Z.md  darla_20260603T210711Z.html  darla_20260603T210711Z.json  darla_20260603T210711Z.md  darla_20260603T210714Z.html  (+23 more)
groundtruth/outputs/projects/darla/: darla_20260604T143958Z.html  darla_20260604T143958Z.json  darla_latest.html  darla_latest.json
groundtruth/outputs/projects/nvidia-base-pod-deployment/: darla_20260604T150417Z.md  darla_20260604T172932Z.md  darla_latest.json
groundtruth/outputs/projects/project-dario/: darla_20260604T125632Z.html  darla_20260604T144014Z.html  darla_20260604T144014Z.json  darla_20260604T144014Z.md  darla_latest.html  darla_latest.md
groundtruth/ui/: __init__.py  aidos_cli.py  darla_cli.py  darla_dashboard.py
notebooks/: launchable.ipynb  launchable.pre_netless_backup.ipynb  launchable_core.ipynb
scripts/: sanitize_workbook.py
siteops_validator/: README.md  requirements.txt
siteops_validator/artifacts/: command_report.json  full_report.json  validation_report.json
siteops_validator/examples/: bom_example.json  command_checks.json
siteops_validator/siteops/: __init__.py  cli.py  commands.py  engine.py  models.py  parsers.py  rules.py
tests/unit/test_aidos/: test_ansible_bundle_and_ui.py  test_api_endpoints.py  test_approval_and_chat_state.py  test_ingestion_bom_builder.py  test_network_layout_ingestion.py  test_orchestrator_flow.py  test_project_ui_api.py
tests/unit/test_groundtruth/: test_aidos_parser.py  test_aidos_rules.py  test_aidos_service.py
(+53 files in other folders)
